--- a/readme
+++ b/readme
@@ -10,3 +10,10 @@ https://www.c2es.org/content/reducing-your-transportation-footprint/
 https://www.wired.com/2017/03/keep-riding-subway-means-know-not-green-think/
 https://www.transit.dot.gov/sites/fta.dot.gov/files/docs/PublicTransportationsRoleInRespondingToClimateChange2010.pdf
 https://calculator.carbonfootprint.com/calculator.aspx?tab=6
+
+https://data.brno.cz/graf/pocet-cestujicich-v-ramci-idsjmk-dpmb/ - pocet cestujicich rocne v mhd
+https://www.finance.cz/511971-pocet-cestujicich-v-brnenske-mhd-loni-rostl-ctvrtym-rokem-po-sobe/
+https://www.bmhd.cz/evidence-dpmb/statistika/?co=stavy - počty vozidel MHD
+https://www.dpmb.cz/cs/vozidla - kapacita vozidel MHD
+https://www.brno-autem.cz/kolik-je-v-brne-automobilu/ - počet aut v brně
+https://data.brno.cz/wp-content/uploads/2018/05/ZOSM-2018-CZ.pdf - 43% lidi jezdí MHD, 38% autem a 18% pěšky
