--- a/readme
+++ b/readme
@@ -10,6 +10,9 @@ https://www.c2es.org/content/reducing-your-transportation-footprint/
 https://www.wired.com/2017/03/keep-riding-subway-means-know-not-green-think/
 https://www.transit.dot.gov/sites/fta.dot.gov/files/docs/PublicTransportationsRoleInRespondingToClimateChange2010.pdf
 https://calculator.carbonfootprint.com/calculator.aspx?tab=6
+- uhlíková stopa auta 144.1g/km
+- stopa šaliny 35.1g/km
+- stopa autobusu 104.7g/km
 
 https://data.brno.cz/graf/pocet-cestujicich-v-ramci-idsjmk-dpmb/ - pocet cestujicich rocne v mhd
 https://www.finance.cz/511971-pocet-cestujicich-v-brnenske-mhd-loni-rostl-ctvrtym-rokem-po-sobe/
