--- a/readme
+++ b/readme
@@ -20,3 +20,8 @@ https://www.bmhd.cz/evidence-dpmb/statistika/?co=stavy - počty vozidel MHD
 https://www.dpmb.cz/cs/vozidla - kapacita vozidel MHD
 https://www.brno-autem.cz/kolik-je-v-brne-automobilu/ - počet aut v brně
 https://data.brno.cz/wp-content/uploads/2018/05/ZOSM-2018-CZ.pdf - 43% lidi jezdí MHD, 38% autem a 18% pěšky
+
+Průměrná vzdálenost co uživatel ujede do práce: 12km
+to jsem si vymyslel, k tomu jsem žádnej zdroj nenašel, ale 6km za cestu tam i zpět mi příjde jako dobrá hodnota.
+
+Počet lidí v Brně: 380 681 - https://www.czso.cz/csu/czso/pocet-obyvatel-v-obcich-za0wri436p
